added homogenous transform, fixed GMM name

--- a/notebooks/pbdlib - Multiple coordinate systems.ipynb
+++ b/notebooks/pbdlib - Multiple coordinate systems.ipynb
@@ -2,15 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "2023-03-14 14:47:14.729473: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-03-14 14:47:14.814618: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2023-03-14 14:47:14.814632: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2023-03-14 14:47:15.156863: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-14 14:47:15.156905: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-14 14:47:15.156909: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     }
    ],
@@ -50,9 +55,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['A', 'x', 'b', 'obj_x', 'dx'])\n",
+      "9 (72, 2)\n",
+      "demos_xdx 9 (72, 4) (80, 4)\n",
+      "9 (72, 2, 2, 2) 9 (72, 2)\n",
+      "9 (72, 2, 4, 4) (72, 2, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "filename = 'reach_target'\n",
     "\n",
@@ -60,28 +77,45 @@
     "\n",
     "demos = np.load(pbd_path + filename + '.npy', allow_pickle=True, encoding='latin1')[()]\n",
     "\n",
+    "print(demos.keys())\n",
+    "\n",
     "### Trajectory data\n",
     "demos_x = demos['x'] # position\n",
+    "print(len(demos_x), demos_x[0].shape)\n",
     "demos_dx = demos['dx'] # velocity\n",
     "demos_xdx = [np.concatenate([x, dx], axis=1) for x, dx in zip(demos_x, demos_dx)] # concatenation\n",
+    "print(\"demos_xdx\", len(demos_xdx), demos_xdx[0].shape, demos_xdx[1].shape)\n",
     "\n",
     "### Coordinate systems transformation\n",
     "demos_A = [d for d in demos['A']]\n",
     "demos_b = [d for d in demos['b']]\n",
     "\n",
+    "print(len(demos_A), demos_A[0].shape, len(demos_x), demos_x[0].shape)\n",
+    "\n",
     "### Coordinate systems transformation for concatenation of position-velocity\n",
     "demos_A_xdx = [np.kron(np.eye(2), d) for d in demos_A]\n",
-    "demos_b_xdx = [np.concatenate([d, np.zeros(d.shape)], axis=-1) for d in demos_b]"
+    "demos_b_xdx = [np.concatenate([d, np.zeros(d.shape)], axis=-1) for d in demos_b]\n",
+    "print(len(demos_A_xdx), demos_A_xdx[0].shape, demos_b_xdx[0].shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(747, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "### Stacked demonstrations\n",
     "data_x = np.concatenate([d for d in demos_x], axis=0)\n",
+    "\n",
+    "print(data_x.shape)\n",
     "\n",
     "ylim = [np.min(data_x[:, 1]) - 20., np.max(data_x[:, 1]) + 20]\n",
     "xlim = [np.min(data_x[:, 0]) - 20., np.max(data_x[:, 0]) + 20]"
@@ -97,14 +131,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(72, 8) (72, 2, 4)\n"
+      "9 (72, 4)\n",
+      "9 (72, 2, 4, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(demos_xdx), demos_xdx[0].shape)\n",
+    "print(len(demos_A_xdx), demos_A_xdx[0].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 (72, 8) (72, 2, 4)\n"
      ]
     }
    ],
@@ -117,7 +170,7 @@
     "# concatenated version of the coordinate systems\n",
     "demos_xdx_augm = [d.reshape(-1, 8) for d in demos_xdx_f]\n",
     "\n",
-    "print(demos_xdx_augm[0].shape, demos_xdx_f[0].shape)"
+    "print(len(demos_xdx_augm), demos_xdx_augm[0].shape, demos_xdx_f[0].shape)"
    ]
   },
   {
@@ -129,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +190,8 @@
      "output_type": "stream",
      "text": [
       "0.001\n",
-      "EM did not converge\n"
+      "EM did not converge\n",
+      "(4, 8) (4, 8, 8)\n"
      ]
     },
     {
@@ -158,6 +212,8 @@
     "\n",
     "# EM to train model\n",
     "model.em(demos_xdx_augm, reg=1e-3) \n",
+    "\n",
+    "print(model.mu.shape, model.sigma.shape)\n",
     "\n",
     "# plotting\n",
     "fig, ax = plt.subplots(ncols=2, nrows=2)\n",
@@ -194,15 +250,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 4, 4)\n",
+      "[[ 1.  0.  0.  0.]\n",
+      " [-0.  1. -0.  0.]\n",
+      " [ 0.  0.  1.  0.]\n",
+      " [-0.  0. -0.  1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.patches as mpatches\n",
     "demo_idx = 4\n",
     "# get transformation for given demonstration. \n",
     "# We use the transformation of the first timestep as they are constant\n",
     "A, b = demos_A_xdx[demo_idx][0], demos_b_xdx[demo_idx][0] \n",
+    "\n",
+    "print(A.shape)\n",
+    "\n",
+    "print(A[0])\n",
     "\n",
     "# transformed model for coordinate system 1\n",
     "mod1 = model.marginal_model(slice(0, 4)).lintrans(A[0], b[0])\n",
@@ -216,16 +288,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb0946b4ee0>"
+       "<matplotlib.legend.Legend at 0x7fc6452c10f0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -271,14 +343,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[72, 80, 82, 90, 92, 78, 86, 83, 84]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([len(d) for d in demos_xdx_augm])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3817756/315333022.py:2: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
+      "/tmp/ipykernel_135811/315333022.py:2: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
       "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
       "  fig, ax = plt.subplots(ncols=nbcol, nrows=np.ceil(float(len(demos_x))/nbcol).astype(np.int))\n"
      ]
@@ -330,6 +419,13 @@
     "\n",
     "plt.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
